# localtrader

./: .gitmodules  CMakeLists.txt  IMPLEMENTATION.md  README.md  get_bbbo.py  monitor.R  random_orders.py  scalper.py  server.py
docs/: exchange.org
localtrader/: client.py  order.py  orderbook.py  side.py  trade.py
src/: CMakeLists.txt  server.cpp
src/exchange/: CMakeLists.txt  client.cpp  client.h  exchange.cpp  exchange.h  order.cpp  order.h  orderbook.cpp  orderbook.h  trade.cpp  trade.h
tests/: CMakeLists.txt  client_tests.cpp  exchange_tests.cpp  order_tests.cpp  orderbook_tests.cpp  test_order.py  test_orderbook.py  test_trade.py  trade_tests.cpp
